[tool.poetry]
name = "psx"
version = "0.1.0"
description = "Python XML Preprocessor"
authors = ["Jabbey92 <92jbach@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyPEG2 = "^2.15.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
